Added version metadata

--- a/deploy/apply/stackset.yaml
+++ b/deploy/apply/stackset.yaml
@@ -2,6 +2,7 @@ apiVersion: zalando.org/v1
 kind: StackSet
 metadata:
   name: website
+  version: v$LOCAL_VERSION
 spec:
   ingress:
     hosts: [website.ingress.john-kevin.me]
